log
Thu 16 May 2024 04:18:20 PM UTC: 
 sudoku.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:68:23: error: ‘y’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   68 |       adj->sudo[x][y] = i;
      |       ~~~~~~~~~~~~~~~~^~~
sudoku.c:68:23: error: ‘x’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
cc1: all warnings being treated as errors
Compilation failed
57680f3
Thu 16 May 2024 04:19:58 PM UTC: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
0853ea1
